@@ -699,6 +699,7 @@ NET_LIB = \
 	net.lib_rev.o \
 	socket_accept.o \
 	socket_bind.o \
+	socket_check_daemon.o \
 	socket_connect.o \
 	socket_gethostbyaddr.o \
 	socket_gethostbyname.o \
