@@ -317,6 +317,7 @@ SOCKET_OBJ = \
 	socket_accept.o \
 	socket_bind.o \
 	socket_connect.o \
+	socket_check_daemon.o \
 	socket_gethostbyaddr.o \
 	socket_gethostbyname.o \
 	socket_gethostid.o \
